--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Achromatopsia Simulator (Debug)</title>
+  <title>Achromatopsia Simulator</title>
   <style>
-    /* Styles for fullscreen video and metadata overlay */
+    /* Consider extracting styles to a separate CSS file for maintainability */
     body, html {
       margin: 0;
       padding: 0;
@@ -22,32 +22,43 @@
       object-fit: cover;
       filter: grayscale(100%);
     }
+    #overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+    }
     #metadata {
       position: absolute;
       bottom: 10px;
       left: 10px;
-      background: rgba(0, 0, 0, 0.7);
+      background: rgba(0, 0, 0, 0.5);
       padding: 8px;
       border-radius: 4px;
       font-size: 14px;
-      max-width: 90%;
-      overflow-wrap: break-word;
       z-index: 2;
     }
   </style>
 </head>
 <body>
   <video id="video" autoplay playsinline aria-label="Live video feed"></video>
+  <div id="overlay"></div>
   <div id="metadata">Loading camera metadata...</div>
 
   <script>
+    // Use clear, descriptive names and group related declarations together
     let imageCapture;
     const metadataEl = document.getElementById('metadata');
 
     async function startCamera() {
       try {
         const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' }, audio: false });
-        document.getElementById('video').srcObject = stream;
+        const video = document.getElementById('video');
+        video.srcObject = stream;
+
+        // ImageCapture may not be supported on all Chrome Android versions
         const [track] = stream.getVideoTracks();
         if ('ImageCapture' in window) {
           imageCapture = new ImageCapture(track);
@@ -63,20 +74,25 @@
     async function updateMetadata() {
       if (!imageCapture) return;
       try {
+        // Note: getPhotoSettings may not return all fields on some devices
         const settings = await imageCapture.getPhotoSettings();
-        console.log('PhotoSettings:', settings);
-        metadataEl.textContent = 'Raw settings: ' + JSON.stringify(settings);
+        const iso = settings.iso ?? 'N/A';
+        const exposureTime = settings.exposureTime
+          ? (settings.exposureTime * 1000).toFixed(1) + ' ms'
+          : 'N/A';
+        const aperture = settings.aperture ?? 'N/A';
+        metadataEl.textContent = `ISO: ${iso} | Exposure: ${exposureTime} | Aperture: ${aperture}`;
       } catch (e) {
-        console.error('Error fetching photo settings:', e);
         metadataEl.textContent = 'Metadata unavailable';
       }
     }
 
     function startMetadataLoop() {
       updateMetadata();
-      setInterval(updateMetadata, 2000);
+      setInterval(updateMetadata, 1000); // Consider allowing user to adjust this interval
     }
 
+    // Initialize camera on page load
     startCamera();
   </script>
 </body>
