--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Achromatopsia Simulator</title>
+  <title>Achromatopsia Simulator (Debug 2)</title>
   <style>
-    /* Consider extracting styles to a separate CSS file for maintainability */
     body, html {
       margin: 0;
       padding: 0;
@@ -22,44 +21,36 @@
       object-fit: cover;
       filter: grayscale(100%);
     }
-    #overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-    }
     #metadata {
       position: absolute;
       bottom: 10px;
       left: 10px;
-      background: rgba(0, 0, 0, 0.5);
+      right: 10px;
+      background: rgba(0, 0, 0, 0.8);
       padding: 8px;
       border-radius: 4px;
-      font-size: 14px;
+      font-size: 12px;
+      max-height: 40%;
+      overflow-y: auto;
+      white-space: pre-wrap;
       z-index: 2;
     }
   </style>
 </head>
 <body>
   <video id="video" autoplay playsinline aria-label="Live video feed"></video>
-  <div id="overlay"></div>
   <div id="metadata">Loading camera metadata...</div>
 
   <script>
-    // Use clear, descriptive names and group related declarations together
-    let imageCapture;
+    let imageCapture, track;
     const metadataEl = document.getElementById('metadata');
 
     async function startCamera() {
       try {
         const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' }, audio: false });
-        const video = document.getElementById('video');
-        video.srcObject = stream;
+        document.getElementById('video').srcObject = stream;
+        [track] = stream.getVideoTracks();
 
-        // ImageCapture may not be supported on all Chrome Android versions
-        const [track] = stream.getVideoTracks();
         if ('ImageCapture' in window) {
           imageCapture = new ImageCapture(track);
           startMetadataLoop();
@@ -74,14 +65,14 @@
     async function updateMetadata() {
       if (!imageCapture) return;
       try {
-        // Note: getPhotoSettings may not return all fields on some devices
         const settings = await imageCapture.getPhotoSettings();
-        const iso = settings.iso ?? 'N/A';
-        const exposureTime = settings.exposureTime
-          ? (settings.exposureTime * 1000).toFixed(1) + ' ms'
-          : 'N/A';
-        const aperture = settings.aperture ?? 'N/A';
-        metadataEl.textContent = `ISO: ${iso} | Exposure: ${exposureTime} | Aperture: ${aperture}`;
+        const capabilities = await imageCapture.getPhotoCapabilities();
+        const trackSettings = track.getSettings();
+
+        metadataEl.textContent =
+          'PhotoSettings: ' + JSON.stringify(settings, null, 2) + '\n' +
+          'PhotoCapabilities: ' + JSON.stringify(capabilities, null, 2) + '\n' +
+          'TrackSettings: ' + JSON.stringify(trackSettings, null, 2);
       } catch (e) {
         metadataEl.textContent = 'Metadata unavailable';
       }
@@ -89,10 +80,9 @@
 
     function startMetadataLoop() {
       updateMetadata();
-      setInterval(updateMetadata, 1000); // Consider allowing user to adjust this interval
+      setInterval(updateMetadata, 2000);
     }
 
-    // Initialize camera on page load
     startCamera();
   </script>
 </body>
