--- a/index.html
+++ b/index.html
@@ -1,113 +1,130 @@
-<!DOCTYPE html>
+<script type="text/javascript">
+        var gk_isXlsx = false;
+        var gk_xlsxFileLookup = {};
+        var gk_fileData = {};
+        function filledCell(cell) {
+          return cell !== '' && cell != null;
+        }
+        function loadFileData(filename) {
+        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+            try {
+                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                var firstSheetName = workbook.SheetNames[0];
+                var worksheet = workbook.Sheets[firstSheetName];
+
+                // Convert sheet to JSON to filter blank rows
+                var jsonData = XLSX.utils.sheet_to_json(worksheet, { header: 1, blankrows: false, defval: '' });
+                // Filter out blank rows (rows where all cells are empty, null, or undefined)
+                var filteredData = jsonData.filter(row => row.some(filledCell));
+
+                // Heuristic to find the header row by ignoring rows with fewer filled cells than the next row
+                var headerRowIndex = filteredData.findIndex((row, index) =>
+                  row.filter(filledCell).length >= filteredData[index + 1]?.filter(filledCell).length
+                );
+                // Fallback
+                if (headerRowIndex === -1 || headerRowIndex > 25) {
+                  headerRowIndex = 0;
+                }
+
+                // Convert filtered JSON back to CSV
+                var csv = XLSX.utils.aoa_to_sheet(filteredData.slice(headerRowIndex)); // Create a new sheet from filtered array of arrays
+                csv = XLSX.utils.sheet_to_csv(csv, { header: 1 });
+                return csv;
+            } catch (e) {
+                console.error(e);
+                return "";
+            }
+        }
+        return gk_fileData[filename] || "";
+        }
+        </script><!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Achromatopsia Simulator</title>
   <style>
-    body, html {
-      margin: 0;
-      padding: 0;
+    body { margin: 0; overflow: hidden; background: black; }
+    #video { display: none; }
+    #canvas {
+      width: 100%;
       height: 100%;
-      background: black;
-      overflow: hidden;
-      position: relative;
-      color: white;
-      font-family: sans-serif;
+      object-fit: contain;
+      display: block;
     }
-    video {
-      width: 100vw;
-      height: 100vh;
-      object-fit: cover;
-      filter: grayscale(100%);
-    }
-    #overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      background: white;
-      pointer-events: none;
-      opacity: 0;
-      transition: opacity 0.1s;
-    }
-    #controls {
-      position: absolute;
-      top: 10px;
-      left: 50%;
-      transform: translateX(-50%);
-      background: rgba(0,0,0,0.5);
-      padding: 8px 12px;
-      border-radius: 4px;
-      z-index: 2;
-      display: flex;
-      align-items: center;
-      font-size: 14px;
-    }
-    #controls label {
-      margin-right: 8px;
-    }
-    #controls input[type=range] {
-      flex: 1;
-    }
-    #sampleCanvas {
-      display: none;
-    }
+    #error { position: absolute; top: 10px; left: 10px; color: red; background: white; padding: 5px; }
   </style>
 </head>
 <body>
   <video id="video" autoplay playsinline></video>
-  <div id="overlay"></div>
-  <div id="controls">
-    <label for="thresholdSlider">Light Threshold:</label>
-    <input id="thresholdSlider" type="range" min="0" max="255" value="180" />
-  </div>
-  <canvas id="sampleCanvas" width="160" height="120"></canvas>
-
+  <canvas id="canvas"></canvas>
+  <div id="error"></div>
   <script>
     const video = document.getElementById('video');
-    const overlay = document.getElementById('overlay');
-    const thresholdSlider = document.getElementById('thresholdSlider');
-    const sampleCanvas = document.getElementById('sampleCanvas');
-    const sampleCtx = sampleCanvas.getContext('2d');
+    const canvas = document.getElementById('canvas');
+    const ctx = canvas.getContext('2d');
+    const errorDiv = document.getElementById('error');
 
+    // Start camera
     async function startCamera() {
       try {
-        const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' }, audio: false });
+        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
         video.srcObject = stream;
-        video.addEventListener('loadedmetadata', () => {
-          video.play();
-          requestAnimationFrame(processFrame);
-        });
+        video.onloadedmetadata = () => {
+          // Set canvas pixel dimensions to match scaled display size
+          updateCanvasSize();
+          errorDiv.textContent = '';
+          processFrame();
+        };
       } catch (err) {
-        console.error('Camera error:', err);
+        errorDiv.textContent = `Error: ${err.message}. Please allow camera access in System Settings > Privacy & Security > Camera and reload.`;
+        console.error('Camera access failed:', err);
       }
     }
 
-    function processFrame() {
-      sampleCtx.drawImage(video, 0, 0, sampleCanvas.width, sampleCanvas.height);
-      const imageData = sampleCtx.getImageData(0, 0, sampleCanvas.width, sampleCanvas.height);
-      const data = imageData.data;
-      let total = 0;
-      for (let i = 0; i < data.length; i += 16) {
-        total += (data[i] + data[i+1] + data[i+2]) / 3;
-      }
-      const count = data.length / 16;
-      const avgBrightness = total / count;
+    // Update canvas pixel dimensions to match display size
+    function updateCanvasSize() {
+      const aspectRatio = video.videoWidth / video.videoHeight;
+      const vw = window.innerWidth;
+      const vh = window.innerHeight;
+      let canvasWidth, canvasHeight;
 
-      const threshold = +thresholdSlider.value;
-      if (avgBrightness > threshold) {
-        const excess = Math.min(avgBrightness - threshold, 255 - threshold);
-        overlay.style.opacity = (excess / (255 - threshold)).toFixed(2);
+      if (vw / vh > aspectRatio) {
+        // Viewport is wider than video; fit to height
+        canvasHeight = vh;
+        canvasWidth = vh * aspectRatio;
       } else {
-        overlay.style.opacity = 0;
+        // Viewport is taller than video; fit to width
+        canvasWidth = vw;
+        canvasHeight = vw / aspectRatio;
       }
 
+      canvas.width = Math.round(canvasWidth);
+      canvas.height = Math.round(canvasHeight);
+    }
+
+    // Process video frame (grayscale only)
+    function processFrame() {
+      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+      let imgData = ctx.getImageData(0, 0, canvas.width, canvas.height);
+      let data = imgData.data;
+      for (let i = 0; i < data.length; i += 4) {
+        const avg = (data[i] + data[i + 1] + data[i + 2]) / 3;
+        data[i] = data[i + 1] = data[i + 2] = avg;
+      }
+      ctx.putImageData(imgData, 0, 0);
       requestAnimationFrame(processFrame);
     }
 
-    startCamera();
+    // Handle window resize
+    window.addEventListener('resize', updateCanvasSize);
+
+    // Check if getUserMedia is supported
+    if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
+      errorDiv.textContent = 'Error: This browser does not support camera access. Try Chrome, Safari, or Firefox.';
+    } else {
+      startCamera();
+    }
   </script>
 </body>
 </html>
